fix: update background color for improved contrast in banner and posts section

--- a/_sass/_dd.scss
+++ b/_sass/_dd.scss
@@ -215,7 +215,7 @@ div.content {
 }
 
 div.posts {
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(10, 10, 10, 0.80);
     box-sizing: border-box;
     box-shadow: 0 0 25px var(--box-shadow-color);
     border: 1px solid var(--border-color);
